# co2

./: .gitignore  AGENTS.md  Cargo.toml  README.md  co2c.nu  create_bundle.sh  main.c  x1.rs
.github/workflows/: build-bundle.yml  pages.yml
.opencode/agents/: co2-manager.md
co2/: Cargo.toml
co2-multicall/: Cargo.toml
co2-multicall/src/: main.rs
co2/src/: main.rs
co2_ast/src/: diagnostic.rs  lib.rs  resolver.rs  transform.rs
co2_crate_sig/: Cargo.toml
co2_crate_sig/src/: ast_resolver.rs  ctx.rs  lib.rs  lowering.rs  mir.rs  resolver.rs  span.rs  struct_manager.rs  ty.rs
co2_driver_lib/: Cargo.toml
co2_driver_lib/src/: hir_ty.rs  lib.rs  mir.rs  preprocess.rs  types.rs
co2_hir/: Cargo.toml
co2_hir/src/: decl.rs  expr.rs  initializer_tree.rs  item.rs  lib.rs  resolver.rs  stmt.rs  ty.rs
co2_hir_mir/: Cargo.toml
co2_hir_mir/src/: ir.rs  lib.rs  lower.rs  resolver.rs
co2_mir/src/: allocation.rs  basic_block.rs  build.rs  operand.rs  place.rs
co2_parser/: Cargo.toml
co2_parser/src/: diagnostic.rs  lexer.rs  lib.rs  main.rs  parser.rs  rust_ast.rs  type_ir.rs
co2_preprocessor/src/: builtin_macros.rs  conditionals.rs  lib.rs  (+4 more)
co2_test_harness/: Cargo.toml
co2c/: Cargo.toml
co2c/src/: args.rs  main.rs
co2cc/: Cargo.toml
co2miri/: Cargo.toml
co2rustc/: Cargo.toml
docs/: language_guide.md  quick_tour.md
fake_hello_world/: Cargo.toml
gh-pages/: index.html  install.sh
rustc_public_generative/: Cargo.toml  bacon.toml
test/: arith.c  control.c  driver.sh  function.c  initializer.c  literal.c  mine.c  pointer.c  string.c  struct.c
(+37 files in other folders)
